# camera_calibration_virtana

./: CMakeLists.txt  calibration_points.xml  calibration_points4.xml  package.xml
cfg/: calibration.cfg
include/camera_calibration_virtana/: image_proc.h  world_transform.h
intrinsic_and_extrinsic_optimise_real_data/src/: camera_calibration_real_data.cpp
launch/: sim_camera.launch
models/: cube.mtl
models/camera/: camera.urdf.xacro
models/checkerboard/: box.urdf.xacro
src/: image_proc_node.cpp  nlo_eg.cpp  nlo_eg_py.py  world_transform_pub.cpp
src/camera_calibration_virtana/: image_proc.cpp  world_transform.cpp
